v4.16 ??? May 2014
  - Added support for the 'no_receiver_check' argument to connect() in PyQt
    v4.11.
  - Added the --configuration option to configure.py.
  - Added the --sysroot option to configure.py.
  - Added the --target-py-version option to configure.py.
  - Added the --no-tools option to configure.py.
  - Added the --use-qmake option to configure.py.
  - Bug fixes.

v4.15.5 14th March 2014
  - The use_arch argument of sipconfig.create_wrapper() can now specify a space
    separated set of architectures.
  - Bug fixes.

v4.15.4 8th January 2014
  - Added SIP_SSIZE_T_FORMAT to the C API.
  - Bug fixes (specifically for PyQt5).

v4.15.3 16th October 2013
  - Bug fixes (specifically for PyQtChart).

v4.15.2 14th September 2013
  - sipConvertToArray() will now optionally take ownership of the array memory.
  - Added support for char, unsigned char, short, int, float and double as
    array types.
  - Bug fixes.

v4.15.1 23rd August 2013
  - Fixes a regression in the handling of hidden virtual methods.

v4.15 21st August 2013
  - Added the call_super_init argument to the %Module directive to specify that
    classes should support cooperative multi-inheritance.
  - Added the %FinalisationCode directive.
  - Added the /Mixin/ class annotation.
  - Added the /NoScope/ enum annotation.
  - Added sipConvertFromNewPyType() to the C API.
  - Added sipConvertToArray() and sipConvertToTypedArray() to the C API.
  - Added sipRegisterProxyResolver() to the C API.
  - Bug fixes.

v4.14.7 16th June 2013
  - The internal API version is increased to 10.0 requiring the regeneration of
    all modules.
  - Added the /Sequence/ function annotation.
  - %ConvertFromTypeCode can now be specified for classes.
  - Added sipEnableAutoconversion() to the C API.
  - Added sipSetDestroyOnExit() to the C API.
  - Bug fixes.

v4.14.6 21st April 2013
  - Bug fixes.

v4.14.5 26th March 2013
  - Bug fixes (specifically for QGIS).

v4.14.4 1st March 2013